# model-fitness

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vitest.config.ts
.claude/: senior-dev.md
.claude/agents/: engineer.md  expert-ellis.md  helper.md  junior-dev.md  junior-pat.md  quick.md  senior-engineer.md  senior-morgan.md
.github/workflows/: baseline-matrix.yml  ci.yml  confluence-sync.yml  docs-architecture.yml  drift-sensor.yml  verify-oidc.yml
ADRs/: 0001-sqlite-persistence.md
docs/: slice-3-deployment-audit.md  slice-3p5-deployment-audit.md
docs/adr/: MFP-ADR-005-sensor-plugin.md
docs/architecture/: README.md  workspace.dsl
docs/architecture/exports/: index.html
docs/ui/: prototype-print.html
fitness/architecture-tests/: README.md
fitness/boundary-tests/: README.md
fitness/conformance/: README.md
mmfp/: __init__.py
mmfp/api/: Dockerfile  README.md  candidate_detail.py  curator.py  datasets.py  drift.py  judge_queue.py  main.py  promotion.py  rubric_preview.py  rubric_read.py  rubric_store.py  rubric_write.py  scoreboard.py  seed.py  trends.py
mmfp/api/tests/: test_candidate_detail.py  test_cors.py  test_curator.py  test_datasets.py  test_drift.py  test_health.py  test_judge_queue.py  (+8 more)
mmfp/bindings/: README.md  __init__.py  _registry.py
mmfp/cli/: __main__.py
mmfp/engine/: __init__.py  _retry.py  matrix.py  scoring.py
mmfp/evaluators/: README.md  __init__.py  _registry.py
mmfp/models/: __init__.py  _common.py  audit.py  binding_response.py  candidate.py  dataset.py  drift.py  matrix_run.py  rubric.py
mmfp/persistence/: __init__.py  audit_log.py  blob_seam.py  candidate_status.py  drift_store.py  judge_queue_repository.py  matrix_run_repository.py
mmfp/plugins/: README.md  __init__.py  binding.py  evaluator.py  sensor.py
mmfp/products/: loader.py
mmfp/reporters/: README.md
mmfp/sensors/: __init__.py  drift.py  langsmith_sampler.py
mmfp/tests/: conftest.py  test_matrix_run.py  test_mli_product_config.py  test_models.py  test_rubric_alignment.py
platform/: __init__.py
platform/api/: Dockerfile
platform/bindings/: README.md
platform/core/: README.md
platform/evaluators/: README.md
platform/observability/: README.md
platform/tests/: conftest.py  test_matrix_run.py
products/_template/: README.md
products/mli/: KNOWN_GAPS.md  README.md  candidates.yaml  judge_samples.jsonl  rubric.yaml
schemas/v1/: candidate.json  dataset.json  driftsignal.json  matrixrun.json  rubric.json
scripts/: confluence-sync.py  export_schemas.py  run_drift_sensor.py  seed_dev_runs.py
shared/datasets/: README.md
tests/: setup.ts  tsconfig.json
tests/e2e/: mli-262-app-shell.spec.ts  mli-263-portfolio-summary.spec.ts  slice-01-walking-skeleton.spec.ts  slice-02-real-scoring.spec.ts  slice-03-trends.spec.ts  slice-04-editor.spec.ts  slice-05-promotion.spec.ts  slice-06-curator.spec.ts  slice-07-drift.spec.ts  slice-3p5-editor-and-scoreboard.spec.ts
tests/reporters/: testrail-reporter.test.ts  testrail-reporter.ts
tests/stubs/: next-headers.ts  next-link.tsx  next-navigation.ts  next-server.ts
tests/unit/: candidate-detail.test.tsx  curator.test.tsx  decision-modal.test.tsx  drift-banner.test.tsx  history-panel.test.tsx  monitor.test.tsx  rubric-editor.test.tsx  scoreboard-components.test.tsx  spark.test.tsx  tab-nav.test.tsx  trend-strip.test.tsx  ui-middleware.test.ts  vendor.test.ts
ui/: .dockerignore  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/app/: globals.css  layout.tsx
ui/components/: AppShell.tsx  CandidateDetail.tsx  Curator.tsx  DecisionModal.tsx  DriftBanner.tsx  HistoryPanel.tsx  MmfpHeader.tsx  PortfolioSummary.tsx  RoleBadge.tsx  RubricEditor.tsx  Scorecard.tsx  TabNav.tsx  TierCard.tsx  TrendStrip.tsx  VersionBadge.tsx
ui/lib/: actions.ts  env.ts  promotion.ts  roles.ts  rubric.ts  scoreboard.ts  vendor.ts
ui/prototype/: README.md  curator.jsx  data.jsx  editor.jsx  history.jsx  index.html  primitives.jsx  scoreboard.jsx  shell.jsx
(+74 files in other folders)
