[project]
name = "mmfp"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Dev tooling required by CI. ruff is the linter (lint-python job); pytest
# covers unit-python (httpx is now a runtime dep — FastAPI TestClient and
# the Foundry binding both use it).
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmfp*"]

[tool.pytest.ini_options]
# Repo root should normally be on sys.path automatically via editable install.
markers = [
    "slice_acceptance: deliberately-red tests that gate slice completion; pass when the slice's implementation tasks land. Excluded from the standard unit-test CI job.",
    "integration: hits a real external service (Foundry, LangSmith, ...); skipped by default and gated on env-var presence. Excluded from the standard unit-test CI job.",
]

[tool.ruff]
# Slice 1 baseline — start permissive, tighten later (P1: earn complexity).
line-length = 100
target-version = "py312"
extend-exclude = [
    "ui/prototype",
    ".venv",
    "node_modules",
    "playwright-report",
    "test-results",
]

[tool.ruff.lint]
# Default rule set: pycodestyle errors, pyflakes, isort. Add more as the
# codebase matures; do not over-rule the walking skeleton.
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
